################################################################################
# Copyright (c) 2010-2013 Krell Institute. All Rights Reserved.
#
# This program is free software; you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation; either version 2 of the License, or (at your option) any later
# version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# this program; if not, write to the Free Software Foundation, Inc., 59 Temple
# Place, Suite 330, Boston, MA  02111-1307  USA
################################################################################

nobase_include_HEADERS = \
	KrellInstitute/Core/Address.hpp \
	KrellInstitute/Core/AddressBitmap.hpp \
	KrellInstitute/Core/AddressBuffer.hpp \
	KrellInstitute/Core/AddressEntry.hpp \
	KrellInstitute/Core/AddressRange.hpp \
	KrellInstitute/Core/Assert.hpp \
	KrellInstitute/Core/BFDSymbols.hpp \
	KrellInstitute/Core/Blob.hpp \
	KrellInstitute/Core/CBTFTopology.hpp \
	KrellInstitute/Core/Exception.hpp \
	KrellInstitute/Core/ExtentGroup.hpp \
	KrellInstitute/Core/Extent.hpp \
	KrellInstitute/Core/Interval.hpp \
	KrellInstitute/Core/LinkedObjectEntry.hpp \
	KrellInstitute/Core/LoopInfo.hpp \
	KrellInstitute/Core/LoopInfoVector.hpp \
	KrellInstitute/Core/Path.hpp \
	KrellInstitute/Core/PCData.hpp \
	KrellInstitute/Core/StackTrace.hpp \
	KrellInstitute/Core/StacktraceData.hpp \
	KrellInstitute/Core/SymbolTable.hpp \
	KrellInstitute/Core/SymtabAPISymbols.hpp \
	KrellInstitute/Core/Time.hpp \
	KrellInstitute/Core/TimeInterval.hpp \
	KrellInstitute/Core/ThreadName.hpp \
	KrellInstitute/Core/ThreadState.hpp \
	KrellInstitute/Core/TotallyOrdered.hpp

